# AtHomeHandMeTheCup

./: README.md
catkin_ws/: .ycm_extra_conf.py
catkin_ws/devel/include/darknet_ros_msgs/: BoundingBox.h  BoundingBoxes.h  CheckForObjectsAction.h  CheckForObjectsActionFeedback.h  CheckForObjectsActionGoal.h  CheckForObjectsActionResult.h  CheckForObjectsFeedback.h  CheckForObjectsGoal.h  CheckForObjectsResult.h  ObjectCount.h
catkin_ws/devel/lib/catch_object/: catch_object
catkin_ws/devel/lib/find_object/: find_object
catkin_ws/devel/lib/hand_camera/: hand_camera
catkin_ws/devel/lib/kobuki_ctrl/: goback  kobuki_ctrl
catkin_ws/devel/lib/pkgconfig/: arm_ctrl.pc  catch_object.pc  distance.pc  face_recognition.pc  find_object.pc  hand_camera.pc  kobuki_ctrl.pc  project_launch.pc  voice_answer_system.pc  yolopy.pc
catkin_ws/devel/lib/voice_answer_system/: nlp  tts  tuling  voice_record_pub
catkin_ws/devel/share/arm_ctrl/cmake/: arm_ctrlConfig.cmake
catkin_ws/devel/share/catch_object/cmake/: catch_objectConfig.cmake
catkin_ws/devel/share/darknet_ros/cmake/: darknet_rosConfig.cmake
catkin_ws/devel/share/darknet_ros_msgs/cmake/: darknet_ros_msgs-msg-extras.cmake  darknet_ros_msgs-msg-paths.cmake  darknet_ros_msgsConfig.cmake
catkin_ws/devel/share/distance/cmake/: distanceConfig.cmake
catkin_ws/devel/share/face_recognition/cmake/: face_recognitionConfig.cmake
catkin_ws/devel/share/find_object/cmake/: find_objectConfig.cmake
catkin_ws/devel/share/hand_camera/cmake/: hand_cameraConfig.cmake
catkin_ws/devel/share/kinect2_bridge/cmake/: kinect2_bridgeConfig.cmake
catkin_ws/devel/share/kinect2_calibration/cmake/: kinect2_calibrationConfig.cmake
catkin_ws/devel/share/kinect2_registration/cmake/: kinect2_registrationConfig.cmake
catkin_ws/devel/share/kinect2_viewer/cmake/: kinect2_viewerConfig.cmake
catkin_ws/msc/c78dbf2d77e8c0c5cd7cbca5074afdfe/: u.data  urec.data  usr.cdata1591180433  usr.cdata1591180489  usr.cdata1591181003  usr.cdata1591181106  usr.cdata1591504564  usr.cdata1591504572  usr.cdata1591504584  usr.cdata1591504762  usr.cdata1591504774  usr.cdata1591673075  usr.cdata1591673102  usr.cdata1591674124  usr.cdata_r
catkin_ws/src/arm_ctrl/: CMakeLists.txt  package.xml
catkin_ws/src/arm_ctrl/src/: arm_ctrl.py
catkin_ws/src/catch_object/: CMakeLists.txt  package.xml
catkin_ws/src/catch_object/src/: catch_object.cpp
catkin_ws/src/distance/: package.xml
catkin_ws/src/distance/src/: distance_pub.py
catkin_ws/src/face_recognition/: CMakeLists.txt
catkin_ws/src/face_recognition/src/: face_location.py  face_recognition_pub.py
catkin_ws/src/find_object/: CMakeLists.txt
catkin_ws/src/find_object/src/: find_object.cpp
catkin_ws/src/hand_camera/: CMakeLists.txt
catkin_ws/src/hand_camera/src/: hand_camera.cpp
catkin_ws/src/kobuki_ctrl/: CMakeLists.txt
catkin_ws/src/kobuki_ctrl/src/: goback.cpp  kobuki_ctrl.cpp
catkin_ws/src/project_launch/: CMakeLists.txt  main.launch
catkin_ws/src/voice_answer_system/: CMakeLists.txt
catkin_ws/src/voice_answer_system/src/: nlp.cpp  tts.cpp  tuling.cpp  voice_record_pub.cpp
(+37 files in other folders)
